--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type": "module",
   "scripts": {
     "dev": "node --watch app.js"
   },
@@ -12,10 +11,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
+    "@fastify/jwt": "^9.1.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
     "fastify-cors": "^6.1.0",
     "fastify-plugin": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "stripe": "^18.3.0"
   }
