--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,4 +8,4 @@ STRIPE_SECRET_KEY=
 
 STRIPE_WEBHOOK_SECRET=
 STRIPE_CURRENCY=usd
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://127.0.0.1:5500
